--- a/ATE_text_only_short_Intro.tex
+++ b/ATE_text_only_short_Intro.tex
@@ -232,13 +232,13 @@ Thus, the distribution of the admixture times $T_i$ can be thought of as the mix
 \subsubsection{The Simple Pulse Model}\label{The Simple Pulse Model}
 
 
-In the simple pulse model, we assume that all fragments enter the population at the same time $t_a$. Therefore all $T_i$ have the same value $t_a$, and $T$ thus is a constant distribution. We can formalize this by using a Dirac delta function:
+In the simple pulse model, we assume that all fragments enter the population at the same time $t_m$. Therefore all $T_i$ have the same value $t_m$, and $T$ thus is a constant distribution. We can formalize this by using a Dirac delta function:
 
 \begin{equation}
 \label{eq:RV_simple_pulse}
-  P(T_i)=\delta_{t_a}(T_i),
+  P(T_i)=\delta_{t_m}(T_i),
 \end{equation} 
-which integrates to one if $T_i = t_a$.
+which integrates to one if $T_i = t_m$.
 
 
 Therefore,
@@ -246,7 +246,7 @@ Therefore,
 \begin{equation}
 \begin{split}
 \label{eq:Likelihood_function_simple_pulse}
-    P(L_i=l) &= t_ae^{-t_a l}
+    P(L_i=l) &= t_me^{-t_m l}
 \end{split}
 \end{equation}
 
@@ -254,17 +254,17 @@ The expected segment length under a simple pulse model is given by,
 
 \begin{equation}
 \label{eq:Expected_l_simple_pulse}
-    \mathbb{E}[L]=\frac{1}{t_a}
+    \mathbb{E}[L]=\frac{1}{t_m}
 \end{equation}
 
 and variance
 \begin{equation}
 \label{eq:Expected_l_simple_pulse}
-    \text{Var}[L]=\frac{1}{t_a^2}
+    \text{Var}[L]=\frac{1}{t_m^2}
 \end{equation}
 
 
-Note that this definition of the segment length distribution is independent from the migration rate $m$ at $t_a$. Hence, the model does not consider the (higher) probability of admixture segments recombining with each other when the migration rate is high. This can be done following Gravel et al. 2012 \citep{gravel_population_2012}. For Neandertal admixture where $m$, the admixture fraction, is typically low, the exponential assumption is satisfied \citep{liang_lengths_2014}.
+Note that this definition of the segment length distribution is independent from the migration rate $m$ at $t_m$. Hence, the model does not consider the (higher) probability of admixture segments recombining with each other when the migration rate is high. This can be done following Gravel et al. 2012 \citep{gravel_population_2012}. For Neandertal admixture where $m$, the admixture fraction, is typically low, the exponential assumption is satisfied \citep{liang_lengths_2014}.
 
 \subsubsection{The Extended Pulse Model}\label{The Extended Pulse Model}
 
@@ -373,10 +373,7 @@ We specify simulations under the extended pulse model using the mean admixture t
 
 \subsubsection{Recombination maps}\label{recombination map}
 Uncertainties in the recombination map were previously shown to influence admixture time estimates \citep{sankararaman_date_2012,sankararaman_combined_2016,fu_genome_2014}. To investigate the effect of more realistic
-recombination rate variation, we perform simulations using empirical recombination maps. For ALD simulations we
-either use the African-American-Map \citep{hinch_landscape_2011} or
-the HapMap phase 3 \citep{HapMapConsortium_second_2007} for simulations
-under a variable recombination rate. For simplicity, we use the same
+recombination rate variation, we perform simulations using empirical recombination maps. We use the  African-American-Map \citep{hinch_landscape_2011} for simulations to evaluate the relative importance of simulation and modeling parameters for admixture time estimates. The HapMap phase 3 map \citep{HapMapConsortium_second_2007} is used for evaluating inference using the extended pulse model. For simplicity, we use the same
 recombination map (150 Mb of chromosome 1, excluding the first 10 Mb)
 for all simulated chromosomes. The mean recombination rate is
 calculated from the 150 Mb map (\(1.017 \, \frac{cM}{Mb}\) AAMap and
@@ -395,7 +392,7 @@ sizes change over time, and are based on estimates from Neandertal and present-d
 
 The split times between Neandertals and
 modern humans is kept the
-same as in the simple demographic simulations (10,000 generations ago) (S. \ref{fig:figS1} A), and add substructure within Africa starting from 3200 till 2550 generations ago with a per generation migration rate between the two subpopulations of 0.001. The population size of the common ancestor of Neandertals and humans  is set to 18,296 (based on MSMC results). To mimic the age of the samples, Neandertals are sampled 750 generations before the Africans and non-Africans. Finally, we add recent gene flow between African and non-African populations with a total migration rate of 0.01 starting from 200 till 50 generations ago \cite{petr_limits_2019}.
+same as in the simple demographic simulations (10,000 generations ago) (S. \ref{fig:figS1} A), and add substructure within Africa starting from 3200 till 2550 generations ago with a per generation migration rate between the two subpopulations of 0.001. The population size of the common ancestor of Neandertals and humans  is set to 18,296 (based on MSMC results). To mimic the age of the samples, Neandertals are sampled 750 generations before the Africans and non-Africans. Finally, we add recent gene flow between African and non-African populations with a total migration rate of 0.01 starting from 200 till 50 generations ago \citep{petr_limits_2019}.
 
 
 
@@ -417,9 +414,22 @@ removes extremely short-range LD, which might also be due to incomplete lineage 
 
 \subsection{Evaluation of the simulations}
 
-In this section, we describe how we evaluate the accuracy of our inference. More specific, we want to know how much the inferred time estimate deviates from the simulated one under a given set of simulation and inference parameters. We want to compare the influence of the parameters to the influence of the admixture time model. We use a linear model approach to decompose the relative importance of each parameter.
+In this section, we describe how we evaluate the accuracy of our inference. More specifically, we with to evaluate how different parameters affect the bias of admixture time estimates compared to the simulations. We start with evaluating inference under the simple pulse model when this assumption is violated, i.e. we compare inference of single admixture times from simulations under the simple and extended pulse. In a second analysis, we are interested in the relative importance of other simulation and modeling parameters, which we analyse using a linear model. 
+
+
+\subsection{The effect of continuous admixture on the admixture time estimates}\label{the effect of continuous admixture on the admixture time estimates}
+We first evaluate a scenario where simulations are performed under an extended pulse model, but inference is done assuming a simple pulse. This scenario mimics real-world applications where contact likely persists over multiple generations. 
+
+For this purpose, we compare inference on simulations under the extended pulse model with simulations under the simple pulse model. 
+The total amount of gene flow $m$ from Neandertals into non-Africans
+in the two models is equal, and we match the two models such that the mean admixture segment lengths are equal as well, with the only difference being the duration of gene flow $t_d$. All comparisons are based on the LES ascertainment scheme and $d_0 =  0.05 cM$. 
+
 
 \subsection{Modeling parameter effect sizes}\label{modeling prameter effect sizes}
+
+Next we evaluate the impact of certain simulation and analysis parameters in comparison to the extended versus simple pulse model impact. Therefore, we define a ``standard model'' having a constant recombination rate, simple demography, simple pulse gene flow, LES ascertainment scheme and $d_0 = 0.05$. As these parameters may interact with each other, we perform simulations using all 32 possible parameter combinations.
+
+
 We consider a set of five parameters:
 \begin{itemize} 
     \item ascertainment scheme: $A_i$ = LES/HES
@@ -429,7 +439,9 @@ We consider a set of five parameters:
     \item admixture model: $G_i$ = pulse/continuous
 \end{itemize}
 
-For each of the 32 possible set of parameters, we simulate 100 replicates each and fit ALD decay curves. We excluded a very small number of simulations for which the curve could not be estimated (10 out of 3200).
+The genetic distance was assigned using the average recombination rate of the African-American genetic map (assuming a constant recombination rate) for simulations under a variable recombination rate.
+For each of the 32 possible set of parameters, we simulate 100 replicates each and fit ALD decay curves. We excluded a very small number of simulations for which the curve could not be estimated (10 out of 3200). 
+
 
 
 To estimate the effect size of the different parameters (eq.
@@ -437,15 +449,15 @@ To estimate the effect size of the different parameters (eq.
 
 \begin{equation}\label{eq:8}
 \begin{split}
-E_i &\sim Normal(\mu_i,\sigma) \\
+E_i &\sim \text{Normal}(\mu_i,\sigma) \\
 \mu_i &= \alpha + \beta_aA_i + \beta_mM_i + \beta_dD_i + \beta_rR_i + \beta_gG_i \\
-\alpha &\sim Normal(0,2) \\
-\beta_a,\beta_m,\beta_d,\beta_r,\beta_g &\sim Normal(0,2) \\
-\sigma &\sim Exponential(1)
+\alpha &\sim \text{Normal}(0,2) \\
+\beta_a,\beta_m,\beta_d,\beta_r,\beta_g &\sim \text{Normal}(0,2) \\
+\sigma &\sim \text{Exponential}(1)
 \end{split}
 \end{equation}
 
-The response variable $E_i$ for this model are the residuals, the difference between the estimated and simulated admixture time for each simulation:
+The response variable $E_i$ for this model are the residuals, i.e. the difference between the estimated admixture time $t_{est}$ and simulated admixture time $t_{sim}$ for each simulation:
 $$E_i = \frac{t_{est} - t_{sim}}{\sigma_{t_{est}}}$$, where $\sigma$ is the standard deviation of $t_{est}$ , and the model variables $A, M, D, R$ and $G$ are binary predictors.
 We assume a Normal likelihood because it is the maximum entropy distribution in our case. We obtained the posterior probability using a Hamiltonian Monte Carlo MCMC algorithm, as implemented in STAN \citep{carpenter_stan_2017} using an R interface \citep{stan_development_team_rstan_2018,mcelreath_statistical_2020}. The Markov chains converged to the target distribution (Rhat = 1) and efficiently sampled from the posterior (S Table \ref{tab:tableS1}).  
 
@@ -453,15 +465,19 @@ We assume a Normal likelihood because it is the maximum entropy distribution in 
  
 Since the inference of admixture time depends on measuring the recombination clock, we rely on accurate recombination rate estimates from the admixed population to assign genetic distances between SNPs. Since there are not always high-precision population specific recombination maps available, we examine three ways of assigning the genetic distance with various degrees of uncertainty. When simulating data under a recombination map, we either: use the mean recombination rate from the
 respective map to calculate the genetic distance from the physical
-distance for each SNP (assuming recombination to be constant), use the another genetic map to assign distances
-(e.g.~AAMap  for the \texttt{msprime} simulation and HapMap  to assigngenetic distances, emulating uncertainties in the recombination map) or use the same map for simulation and assigning
+distance for each SNP (assuming recombination to be constant with the average recombination rate of the respective map), use another genetic map to assign distances
+(e.g.~AAMap  for the \texttt{msprime} simulation and HapMap  to assign genetic distances, emulating uncertainties in the recombination map) or use the same map for simulation and assigning
 genetic distances (population specific map). 
+
+\subsubsection{Parameter estimation under extended pulse model}
+We next aim to evaluate when $t_d$, i.e.~the duration of the admixture, can be inferred.  For this purpose, the most important parameter is the time $t_{a}$ since admixture happened, as we expect the inference problem to be easier the more recent admixture happened. Inference is then performed using the standard set of parameters defined above. In addition, we also  evaluate the effect of  recombination rate variation. For this purpose, we simulate under both a constant recombination rate and using the empirical HapMap genetic map. Inference is performed using either  a constant recombination rate, using the HapMap (i.e. exact same map as in the simulations) or the AAMap recombination maps (to mimic uncertainty and population differences in estimated recombination maps). 
 
 \subsection{Estimating admixture time from real data}\label{Estimating admixture time from real data}
 To evaluate when we can reject any admixture durations (including a one generation pulse), we applied the extended pulse model on real data from the 1000 Genomes project \cite{the_1000_genomes_project_consortium_global_2015}.
 
 We used the 1000 Genomes phase 3 data together with the Altai, Vindija and Chagyrskaya high coverage Neandertals, including the 107 unrelated individuals from the YRI as representatives of unadmixed Africans and all CEU as admixed Europeans. We only considered biallelic sites, and determine the ancestral allele using  the Chimpanzee reference genome (panTro4). We used the CEU specific fine-scale recombination map \citep{spence_inference_2019} to convert the physical distance between sites into genetic distance. 
 
+All scenarios are compatible with the ALD data from 1000 Genome's CEU computed using YRI and the Altai, Vindija and Chagyrskaya high coverage as reference populations and a CEU specific fine-scale genetic map \citep{spence_inference_2019}.
 
 \section{Results}\label{results}
 
@@ -470,26 +486,17 @@ We used the 1000 Genomes phase 3 data together with the Altai, Vindija and Chagy
 We use coalescent simulations of Neandertal admixture into non-African humans to investigate multi-generation continuous admixture, using a Gamma distribution describing the per generation migration rate (the extended pulse model). Focusing on the ALD approach, we use the ALDER program to infer the decay of LD between ascertained sites informative for Neandertal introgression in non-Africans. The ascertained ALD is fitted with an exponential distribution assuming a one-generation admixture pulse (the simple pulse model).  We simulate this scenario using different conditions of recombination and demography as well as deploying different ascertainment schemes and LD cutoffs. A Generalized Linear Model (GLM) is used to compare all these factors with the effect of an extended pulse on the one-generation assumption. The Lomax distribution describing the ALD under an extended admixture pulse is deployed for fitting the data to obtain the duration of admixture. We test this new fitting with the most inferential factors from the previous analysis on simulated and real data using the ALD.
 
 
-\subsection{The effect of continuous admixture on the admixture time estimates}\label{the effect of continuous admixture on the admixture time estimates}
-We first evaluate a scenario where simulations were performed under an extended pulse model, but inference is done assuming a simple pulse. This scenario mimics real-world applications where contact likely persists over multiple generations. 
-
-To assess the effect of estimating admixture time assuming a one-generation pulse when the real gene flow is actually continuous over multiple generations,
-
-For this purpose, we compare inference on simulations under the extended pulse model with simulations under the simple pulse model. 
-The total amount of gene flow \(m\) from Neandertals into non-Africans
-in the two models is equal, and we match the two models such that the mean admixture tract lengths are equal as well, with the only difference being the duration of gene flow $t_d$. All comparisons are based on the LES ascertainment scheme and $d_0 =  0.05 cM$. 
 
 
 
-\subsubsection{Results for model comparions}
-We first present the result of inference assuming a simple pulse model on simulations under the extended pulse model (Figure \ref{fig:fig2}). 
-
-In Figure \ref{fig:fig2}A, we plot results for both the simple and extended pulse model, for $t_m$ between 250 and 2000 generations, and $t_d = \frac{t_m}{2}$  (i.e. if $t_d= 500$ generations, then $t_d = 250$ and most gene flow occurrs between  375 and 625
+\subsubsection{Results for model comparisons}
+We first present the result of inference assuming a simple pulse model on simulations under the extended pulse model (Figure \ref{fig:fig2}).
+In Figure \ref{fig:fig2}A, we plot results for both the simple and extended pulse model, for $t_m$ between 250 and 2000 generations, and $t_d = \frac{t_m}{2}$  (i.e. if $t_d= 500$ generations, then $t_d = 250$ and most gene flow occurs between  375 and 625
 generations ago). Even for these long gene flows, the mean gene flow time is generally well-estimated, with a deviation of 3\% to 6\% for the simple pulse and 0\% to 5\% for
 the extended pulse models, respectively (Figure \ref{fig:fig2} A).
 
 To further investigate the effect of the duration of gene flow on mean
-admixture time estimates, we compare scenarios where $t_m$ is fixed at 1500, but where $t_d$ varies between one (simple pulse model) and 1500 generations (Figure \ref{fig:fig2}B). Here, we find that the simple pulse model leads to a slight overestimate of $t_m$, and that longer pulses result in more recent admixture time estimates. However, even  for very-long gene flow of $t_d=1,500$ the relative deviation is less than 10\%. Thus, we find that if we are interested in $t_m$, this parameter is generally well-estimated even under scenarios of very long gene flow.
+admixture time estimates, we compare scenarios where $t_m$ is fixed at 1500, but where $t_d$ varies between one (simple pulse model) and 1,500 generations (Figure \ref{fig:fig2}B). Here, we find that the simple pulse model leads to a slight overestimate of $t_m$, and that longer pulses result in more recent admixture time estimates. However, even  for very-long gene flow of $t_d=1,500$ the relative deviation is less than 10\%. Thus, we find that if we are interested in $t_m$, this parameter is generally well-estimated even under scenarios of very long gene flow.
 
 
 This bias is likely caused
@@ -517,15 +524,6 @@ flow. Boxplot created from 100 simulation replicates, respectively.}
 
 \subsection{Comparing effect sizes for technical covariates}\label{comparing effect sizes}
 
-Two common assumptions, namely knowing the recombination pattern and knowing the demographic history, were implicitly used in the previous simulations.
-Previous studies reported that violations of these assumptions can have an effect on the admixture time estimates.
-Hence, we used the African-American genetic map and a more complex demography with substructure in the ancestral human population and additional gene flow between Africans and non-Africans after the Neadertal admixture ended (S. \ref{fig:figS1} B), for simulations under more realistic parameters. The genetic distance was assigned using the average recombination rate of the African-American genetic map (assuming a constant recombination rate).
-Furthermore, we altered the used scheme for ascertainment of SNPs for admixture informative sites. We compared the LES where only
-positions in the admixed population are considered where both source
-populations are diverged from each other, to an even stricter scheme. The Higher-Enrichment Scheme (HES) requiring additional
-to the LES non-Africans to be polymorphic at a SNP. Additionally, we altered the minimal distance between pairs of SNPs for which the LD is calculated from 0.05 cM to 0.02 cM.
-
-
 As the effect of ongoing gene flow is relatively minor, we next evaluate its relative importance for inference compared to other common assumptions made in the inference of admixture times. 
 
 Therefore, we contrast the effect of extended gene flow on admixture time inference with  the effects of a complex demographic history and complex recombination map, as well as the impact of the ascertainment scheme and $d_0$ in the ALD estimation, using a simple and complex setting for each of these parameters. 
@@ -534,15 +532,12 @@ In Figure 3, we present the effect sizes of these four predictors on the admixtu
 
 As a baseline, for comparison, we define a standard model as one using the LES ascertaiment, \(d_{0} = 0.05 cM\), simple demography and constant recombination map). 
 
-As shown in the previous section, under the standard model admixture times are well-estimated, with a mean standardized difference of  0.12 (0.08 - 0.16 95 \% CI) from the true
+As shown in the previous section, under the standard model admixture times are well-estimated, with a mean standardized difference of  -0.03 (-0.07 - 0.02 95 \% CI) from the true
 admixture time.
 
-We find that the  inclusion of a variable recombination map lead to a large underestimate of -1.5 (-1.76 - -1.7 95 \% CI). In contrast, all other covariates had relatively moderate effect sizes  (-0.34 -
--0.28 95 \% CI) is in the range of biases arising from the ascertainment scheme (-0.35 -
--0.29 95 \% CI) and only slightly more then caused by a more complex demography (-0.25 -
--0.19 95 \% CI). 
- (S.
-\ref{fig:figS2}).
+We find that the  inclusion of a variable recombination map lead to a large underestimate of -1.47 -1.53 -- -1.42 $C.I._{95\%}$. In contrast, all other covariates had relatively moderate effect sizes. The extended pulse   (-0.24,  -0.29 -- -0.19) is in the range of biases arising from the ascertainment scheme (-0.33, -0.38 --
+-0.28),a more complex demography (-0.25, -0.30 -- -0.20) and only slightly more then caused by a different $d_0$ (-0.20, -0.16 --
+-0.26) (S.\ref{fig:figS2}).
 
 Overall the bias introduced by the ascertainment, minimal distance
 cutoff, demography and admixture model are  around +/-0.25 standard deviations or less. The major uncertainties in the admixture time
@@ -555,23 +550,26 @@ admixture time estimates for a simple or extended admixture pulse are similarly 
 \caption{\label{fig:fig3} Effect size estimates for each parameter on the standardized difference between true and estimated admixture time. Dotted horizontal line indicates unbiased admixture estimates.}
 \end{figure}
 
-\subsection{Estimating the Lomax-parameters under different conditions}\label{estimating the Lomax-parameters under different conditions}
 
-Building on the previous
-result we want to find out the conditions to retrieve the Lomax
-parameters i.e.~the duration of the admixture. We simulated an admixture
-scenario under a simple demography with varying durations of an extended
-admixture pulse and sampled the population at different time points since the
-end of the interbreeding. Doing so allows us to examine how close one has to
-sample form the end of a continuous admixture to still accurately
-estimate its duration. Since the recombination map was shown to be highly
-influential, we tested the duration estimates under a constant and variable
-recombination using the HapMap genetic map. Here, we correct the
-genetic distance by: assuming a constant rate, using the AAMap (uncertainty in the recombination map) or the
-HapMap itself (having a  population specific recombination map). We used the LES ascertainment scheme in combination with
-a minimal distance of 0.05 cM.  Figure \ref{fig:fig4} A and C show the mean
+% facet_wrap(~ tm + td, labeller="label_both")
+
+\subsection{Parameter estimation under the extended pulse model}\label{estimating the Lomax-parameters under different conditions}
+In Figure 4, we show the accuracy of $t_d$ and $t_m$ estimates in two sets of simulations. In panels A and B we increase both $t_m$ and $t_d$ at a similar rate, such that gene flow ends 50 generations before sampling ($t_{end}=50$, where $t_{end}= t_m - \frac{t_d}{2}$). In panels C and D $t_d$ is kept fixed at 800, but we increase $t_m$.. We further vary recombination rate settings as i) inference and simulation under constant recombination rate, ii) simulation using hapmap, no correction, iii) simulation using hapmap, correction using AAMap, iv) inference and simulation using hapmap. 
+
+Figure \ref{fig:fig4} A and C show the mean
 time estimates received from the Lomax fit. For simulations under a
-constant recombination the mean time can be estimated confidently for different durations and different sampling times after the end of the admixture event. Estimates for simulation under a recombination map only
+constant recombination the mean time can be estimated confidently for different durations and different sampling times after the end of the admixture event. 
+
+Under constant recombination settings, we find that parameters are well-estimated in all scenarios, although we observe a small overestimate of both $t_m$ and $t_d$, for very long admixture durations in the very distant past. In contrast, inference under the simple pulse model results in a slight underestimate \ref{fig:fig2, fig:figS3}.
+
+We also find that the simple pulse model is fairly robust to changes in recombination settings, both using the ``correct'' and a empirically similar recombination map. Only when we do not correct for recombination rate variation, we observe a substantial underestimate by almost a factor of two for more distant admixture \ref{fig:S3}. 
+
+In contrast, estimates under the extended pulse model are substantially more spread out under variable recombination maps, but we do not observer the systematic bias towards more recent admxiture times as in the simple-pulse model. In contrast, the uncorrected scenario results in extremely poor estimates with very high variation, and is clearly unsuitable for this purpose \ref{fig:fig4}. 
+
+We also find that estimates of $t_d$ differ substantially between recombination rate settings. Under constant rates, $t_d$ is well-estimated in all scenarios, and if the recombination rate is known, we get reasonably accurate estimates, at least if admixture is not very old. However, under the scenarios where recombination rates differ between simulation and inference, results become more erratic; For the cases of $t_d=200$ and $t_d=400$, many simulations infer an admixture time of near zero; in contrast, very old admixture results in a large overestimate.
+
+. is substantially less resilient to deviations in the recombination rate. 
+Estimates for simulation under a recombination map only
 assuming a constant rate when calculating the LD results in high uncertainty and overestimation. This is different for estimates under an Exponential distribution (S.  \ref{fig:figS3}). Using the AAMap yields
 results closer to the true value and less biased, however only
 using the exact same genetic map gives unbiased results. Figure
@@ -605,9 +603,10 @@ Duration estimate of the scenario C) Mean time estimates for different sampling 
 generations of gene flow. D) Duration estimate of the scenario}
 \end{figure}
 
+\subsection{Application to Neandertal data}
+In the previous section, we have shown using simulations that it might be difficult to distinguish admixture scenarios of various durations particularly if it happened a long time ago. To evaluate that this is also true for real data, we aim to estimate the Neandretal admixture pulse from the 1000 genomes data, by fitting pulses of durations ranging from one generation up to 2,5000 generations to the ALD decay curve (
+Figure \ref{fig:fig5}, S. Table \ref{tab:tableS2}). Plotting these best-fit ALD curves (Figure \ref{fig:fig5}A) on a y-axis in natural scale shows the extremely slight difference predicted under these drastically different gene flow scenarios. The difference between scenarios becomes more apparent if we log-transform the y-axis (\ref{fig:fig5}B), where we see that ongoing gene flow results in a heavier tail in the ALD distributions. However, due to finite size of the genome.
 
-We can also demonstrate this using real data.
-Figure \ref{fig:fig5} (S. Table \ref{tab:tableS2}) shows multiple admixture duration scenarios ranging from a one generation pulse to 2500 generations of continuous admixture. All scenarios are compatible with the ALD data from 1000 Genome's CEU computed using YRI and the Altai, Vindija and Chagyrskaya high coverage as reference populations and a CEU specific fine-scale genetic map \citep{spence_inference_2019}.
 
 
 
